<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        style="@style/CardView.Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_container"
                style="@style/MaterialTextInputLayout"
                app:counterMaxLength="50"
                app:helperText="@string/user_mandatory_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_address"
                    style="@style/MaterialTextInputEditText"
                    android:hint="@string/order_delivery_address"
                    android:maxLength="50"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postcode_container"
                style="@style/MaterialTextInputLayout"
                app:counterMaxLength="10"
                app:helperText="@string/user_mandatory_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_postcode"
                    style="@style/MaterialTextInputEditText"
                    android:hint="@string/order_postcode"
                    android:maxLength="10"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_container"
                style="@style/MaterialTextInputLayout"
                app:counterMaxLength="50"
                app:helperText="@string/user_mandatory_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postcode_container">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_city"
                    style="@style/MaterialTextInputEditText"
                    android:hint="@string/order_city"
                    android:maxLength="50"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/province_container"
                style="@style/MaterialTextInputLayout"
                app:counterMaxLength="50"
                app:helperText="@string/user_mandatory_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city_container">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_province"
                    style="@style/MaterialTextInputEditText"
                    android:hint="@string/order_province"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_box_default_address"
                style="@style/CheckBox"
                android:layout_marginTop="6dp"
                android:text="@string/order_set_default_address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/province_container"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_address"
        style="@style/MaterialButton"
        android:layout_marginTop="12dp"
        android:text="@string/order_add_delivery_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view"/>
</androidx.constraintlayout.widget.ConstraintLayout>