<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.FragmentTheme">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_buttons"
        style="@style/CardView.Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioGroup
            android:id="@+id/radio_group_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_theme_light"
                style="@style/RadioButton"
                android:text="@string/theme_light"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_theme_dark"
                style="@style/RadioButton"
                android:text="@string/theme_dark"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_button_theme_system"
                style="@style/RadioButton"
                android:text="@string/theme_system" />
        </RadioGroup>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>