<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.loginregister.FragmentRegister">
    <data>
        <variable
            name="viewModel"
            type="com.projectrestaurant.viewmodel.LoginRegisterViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_login_title"
            android:layout_width="150dp"
            style="@style/CardView.Secondary"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"
            app:layout_constraintEnd_toStartOf="@id/card_view_register_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/text_view_login"
                style="@style/TextViewTitleColorVariant"
                android:layout_gravity="center"
                android:text="@string/login_title"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_register_title"
            android:layout_width="150dp"
            style="@style/CardView.Secondary"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_view_login_title"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/text_view_register"
                style="@style/TextViewTitleColorVariant"
                android:layout_gravity="center"
                android:text="@string/register_title"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/CardView.Main"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_login_title">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_container"
                    style="@style/MaterialTextInputLayout"
                    android:importantForAutofill="no"
                    android:maxLength="30"
                    android:minHeight="50dp"
                    app:counterMaxLength="30"
                    app:helperText="@string/user_mandatory_field"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_person">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_name"
                        style="@style/MaterialTextInputEditText"
                        android:hint="@string/user_name_hint"
                        android:inputType="textPersonName"
                        android:maxLength="30"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/surname_container"
                    style="@style/MaterialTextInputLayout"
                    android:layout_marginTop="5dp"
                    android:importantForAutofill="no"
                    android:maxLength="30"
                    android:minHeight="50dp"
                    app:counterMaxLength="30"
                    app:helperText="@string/user_mandatory_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_container"
                    app:startIconDrawable="@drawable/ic_person">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_surname"
                        style="@style/MaterialTextInputEditText"
                        android:hint="@string/user_surname_hint"
                        android:inputType="textPersonName"
                        android:maxLength="30"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_container"
                    style="@style/MaterialTextInputLayout"
                    android:layout_marginTop="5dp"
                    android:importantForAutofill="yes"
                    android:minHeight="50dp"
                    app:counterMaxLength="35"
                    app:helperText="@string/user_mandatory_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/surname_container"
                    app:startIconDrawable="@drawable/ic_email">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_email"
                        style="@style/MaterialTextInputEditText"
                        android:hint="@string/user_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLength="35"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_container"
                    style="@style/MaterialTextInputLayout"
                    android:layout_marginTop="5dp"
                    android:importantForAutofill="no"
                    android:minHeight="50dp"
                    app:counterMaxLength="25"
                    app:helperText="@string/user_mandatory_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_container"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_password"
                        style="@style/MaterialTextInputEditText"
                        android:hint="@string/user_password_hint"
                        android:inputType="textPassword"
                        android:maxLength="25"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_confirm_container"
                    style="@style/MaterialTextInputLayout"
                    android:layout_marginTop="5dp"
                    android:importantForAutofill="yes"
                    android:minHeight="50dp"
                    app:counterMaxLength="25"
                    app:helperText="@string/user_mandatory_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_container"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_password_confirm"
                        style="@style/MaterialTextInputEditText"
                        android:hint="@string/user_password_confirm_hint"
                        android:inputType="textPassword"
                        android:maxLength="25"/>
                </com.google.android.material.textfield.TextInputLayout>
                <CheckBox
                    android:id="@+id/check_box_privacy_policy"
                    style="@style/CheckBox"
                    android:layout_marginTop="5dp"
                    android:minHeight="48dp"
                    android:text="@string/privacy_policy_confirm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_confirm_container"/>
                <ProgressBar
                    android:id="@+id/progress_bar_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/check_box_privacy_policy"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_register"
                    style="@style/MaterialButton"
                    android:layout_marginTop="5dp"
                    android:text="@string/register_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progress_bar_register"/>
                <TextView
                    style="@style/TextViewDescription"
                    android:layout_marginTop="5dp"
                    android:text="@string/register_password_info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_register"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>